# Open-Render-X

./: .gitignore  CMakeLists.txt  CMakePresets.json  DoxygenConfig  README.md
Content/: Globals.h  main.cpp
Content/Header/: Engine.h  Graphics.h  Material.h  Mesh.h  SceneObject.h  Vertex.h
Content/Shaders/Fragment/: FallbackFrag.frag
Content/Shaders/Vertex/: FallbackVertex.vert
Content/Source/: Engine.cpp  Graphics.cpp  Material.cpp  Mesh.cpp  SceneObject.cpp  Vertex.cpp  glad.c
Documentation/: DoxygenConfig  Main Page
Documentation/Files/html/: _engine_8h_source.html  _graphics_8h_source.html  _vertex_8h_source.html  annotated.html  annotated_dup.js  class_engine-members.html  class_engine.html  (+17 more)
Documentation/html/: _engine_8h_source.html  _globals_8h_source.html  _graphics_8h_source.html  _vertex_8h_source.html  annotated.html  class_engine-members.html  class_engine.html  class_engine.js  class_graphics-members.html  class_graphics.html  class_vertex-members.html  class_vertex.html  classes.html  dir_322bb5740ae0ff19e386556789e9a038.html  dir_5d84ce16a2f51073794faf1f09c69187.html  dir_5d84ce16a2f51073794faf1f09c69187.js  dir_e67e1c3aed3e80d3b181378df6c5b624.html  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  index.html  md__r_e_a_d_m_e.html  navtreedata.js  navtreeindex0.js  pages.html
Documentation/latex/: _engine_8h_source.tex  _globals_8h_source.tex  _graphics_8h_source.tex  _vertex_8h_source.tex  annotated.tex  class_engine.tex  class_graphics.tex  class_vertex.tex  files.tex  md__r_e_a_d_m_e.tex  refman.tex
(+23 files in other folders)
